--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "typescript": "^5.2.2",
+    "utterances-react-component": "^1.0.0",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react-scripts": {
+      "typescript": "^5"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
