--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "rules": {
+      "no-useless-escape":"off"
+    },
     "extends": [
       "react-app",
       "react-app/jest"
