--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@giscus/react": "^2.3.0",
+    "@react-spring/parallax": "^9.7.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,6 +20,7 @@
     "react-parallax": "^3.5.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.5",
     "typescript": "^5.2.2",
     "utterances-react-component": "^1.0.0",
     "web-vitals": "^2.1.4"
