--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "utterances-react-component": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "sass": "^1.69.5"
+  },
   "overrides": {
     "react-scripts": {
       "typescript": "^5"
