--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.4.5",
+    "super-react-gist": "^1.1.1",
     "typescript": "^5.2.2",
     "utterances-react-component": "^1.0.0",
     "web-vitals": "^2.1.4"
