--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lisa-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ejuet.github.io",
   "dependencies": {
     "@giscus/react": "^2.3.0",
     "@react-spring/parallax": "^9.7.3",
@@ -28,6 +29,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "sass": "^1.69.5"
   },
   "overrides": {
@@ -39,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "rules": {
